syntax = "proto3";

service Kettle {
  //turn on the kettle
  rpc boilKettle (BoilRequest) returns (BoilResponse) {}
  // stream back the status of the boiling kettle
  rpc boilingStatus (BoilRequest) returns (stream BoilStatus) {}

}

message BoilRequest{
 string on = 1;
}


message BoilResponse{
 string message = 1;
}

message BoilStatus{
  string boilState = 1;
}
